# Rocrail_CommunityEdition

./: CMakeLists.txt  README  buildWindows.txt  create_build.bat  create_build_win_vs.cmd
freerailview/: CMakeLists.txt  freerailviewapp.cpp  freerailviewapp.h  main.cpp  mainwindow.cpp  mainwindow.h
freerailview/resources/: freerail-logo-net.xpm  freerailview.qrc
freerailview/ui/: mainwindow.ui
rocdigs/: CMakeLists.txt
rocdigs/doc/: rocdigsapi-index.html  rocdigsapi.html
rocdigs/impl/: barjut.fm  barjut_impl.h  bidib.fm  bidib_impl.h  cbus.fm  cbus_impl.h  clock.fm  clock_impl.h  cti.fm  cti_impl.h  dcc232.fm  dcc232_impl.h  dccar.fm  dccar_impl.h  ddx.fm  ddx_impl.h  dinamo.fm  dinamo_impl.h  dmx4all.fm  dmx4all_impl.h  dmxartnet.fm  dmxartnet_impl.h  dmxeurolite.fm  dmxeurolite_impl.h  easydcc.fm  easydcc_impl.h  ecos.fm  ecos_impl.h  editspro.fm  editspro_impl.h  esunavi.fm  esunavi_impl.h  got.fm  got_impl.h  hsi88.fm  hsi88_impl.h  hue.fm  hue_impl.h  infracar.fm  infracar_impl.h  (+76 more)
rocdigs/impl/bidib/: bidib.def  bidib_messages.h
rocdigs/impl/cbus/: cbusdefs.h
rocdigs/impl/ddx/: nmra.c
rocdigs/impl/nmra/: nmra.c
rocdigs/public/: barjut.h  bidib.h  cbus.h  clock.h  cti.h  dcc232.h  dccar.h  ddx.h  dinamo.h  dmx4all.h  dmxartnet.h  dmxeurolite.h  easydcc.h  ecos.h  editspro.h  esunavi.h  got.h  hsi88.h  hue.h  infracar.h  inter10.h  loconet.h  lrc135.h  massoth.h  mcs2.h  mgbox.h  mttmfcc.h  muet.h  nce.h  om32.h  opendcc.h  p50.h  p50x.h  perir.h  raptor.h  rci.h  rclink.h  rfid12.h  rmx.h  rocnet.h  (+16 more)
roclcdr/: CMakeLists.txt  roclcdr.xml
roclcdr/doc/: roclcdrapi-index.html  roclcdrapi.html
roclcdr/impl/: lcdriver.fm  lcdriver_impl.h
roclcdr/public/: lcdriver.h
rocnetnode/: CMakeLists.txt
rocnetnode/doc/: rocnetnodeapi-index.html  rocnetnodeapi.html
rocnetnode/impl/: rocnetnode.fm  rocnetnode_impl.h
rocnetnode/public/: rocnetnode.h
rocrail/: CMakeLists.txt  rocrail.xml
rocrail/doc/: rocrailapi-index.html  rocrailapi.html
rocrail/impl/: action.c  action.fm  action_impl.h  analyse.c  analyse.fm  analyse_impl.h  app.c  app.fm  app_impl.h  block.c  block.fm  block_impl.h  blockgroup.c  blockgroup.fm  blockgroup_impl.h  car.fm  car_impl.h  clntcon.fm  clntcon_impl.h  control.c  control.fm  control_impl.h  dec.fm  dec_impl.h  fback.c  fback.fm  fback_impl.h  hclient.c  hclient.fm  hclient_impl.h  http.c  http.fm  http_impl.h  loc.c  loc.fm  loc_impl.h  location.fm  location_impl.h  main.c  model.c  (+59 more)
rocrail/impl/web/: rocweb.c
rocrail/package/: rocrail-root-template.iss
rocrail/public/: action.h  analyse.h  app.h  block.h  blockgroup.h  car.h  clntcon.h  control.h  dec.h  fback.h  hclient.h  htmlint.h  http.h  loc.h  location.h  model.h  modelutils.h  modplan.h  module.h  mvtrack.h  operator.h  output.h  pclient.h  powerman.h  r2rnet.h  rcon.h  route.h  script.h  seltab.h  signal.h  snmp.h  srcpcon.h  stage.h  switch.h  text.h  track.h  tt.h  var.h  weather.h  wrapper.xml  (+1 more)
rocrail/wrapper/doc/: wrapper-en-index.html  wrapper-en.html
rocrail/wrapper/impl/: Accessory.c  AccessoryCtrl.c  Action.c  ActionCond.c  ActionCtrl.c  ActionList.c  AnaOpt.c  AutoCmd.c  BBT.c  BiDiB.c  BiDiBnode.c  BinCmd.c  BinStateCmd.c  Block.c  BlockList.c  Booster.c  BoosterEvent.c  BoosterList.c  CBus.c  CBusNode.c  CBusNodeEvent.c  CBusNodeVar.c  CSOptions.c  CVByte.c  Car.c  CarList.c  ChannelSetup.c  Clock.c  Cmdline.c  Color.c  Command.c  ConCmd.c  Ctrl.c  CustomCmd.c  DCC232.c  DDX.c  DIP.c  DIPGroup.c  DIPValue.c  DMX.c  (+133 more)
rocrail/wrapper/public/: Accessory.h  AccessoryCtrl.h  Action.h  ActionCond.h  ActionCtrl.h  ActionList.h  AnaOpt.h  AutoCmd.h  BBT.h  BiDiB.h  BiDiBnode.h  BinCmd.h  BinStateCmd.h  Block.h  BlockList.h  Booster.h  BoosterEvent.h  BoosterList.h  CBus.h  CBusNode.h  CBusNodeEvent.h  CBusNodeVar.h  CSOptions.h  CVByte.h  Car.h  CarList.h  ChannelSetup.h  Clock.h  Cmdline.h  Color.h  Command.h  ConCmd.h  Ctrl.h  CustomCmd.h  DCC232.h  DDX.h  DIP.h  DMX.h  (+133 more)
rocs/: CMakeLists.txt
rocs/doc/: rocsapi-index.html  rocsapi.html
rocs/impl/: attr.fm  attr_impl.h  cmdln.fm  cmdln_impl.h  dir.fm  dir_impl.h  doc.fm  doc_impl.h  ebcdic.fm  ebcdic_impl.h  event.fm  event_impl.h  file.c  file.fm  file_impl.h  gzip.fm  gzip_impl.h  js.fm  js_impl.h  json.fm  json_impl.h  lib.fm  lib_impl.h  list.fm  list_impl.h  map.fm  map_impl.h  mem.fm  mem_impl.h  mime64.c  mime64.fm  mime64_impl.h  msg.fm  msg_impl.h  mutex.fm  mutex_impl.h  node.fm  node_impl.h  queue.fm  queue_impl.h  (+26 more)
rocs/public/: attr.h  cmdln.h  dir.h  doc.h  ebcdic.h  event.h  file.h  gzip.h  js.h  json.h  lib.h  list.h  map.h  mem.h  mime64.h  msg.h  mutex.h  node.h  queue.h  res.h  serial.h  socket.h  str.h  string.h  strtok.h  system.h  thread.h  trace.h  usb.h  wrpinf.h  xmlh.h
rocutils/: CMakeLists.txt
rocutils/doc/: rocutilsapi-index.html  rocutilsapi.html
rocutils/impl/: addr.fm  addr_impl.h  colorutils.fm  colorutils_impl.h  crc.fm  crc_impl.h  devices.fm  devices_impl.h  fileutils.fm  fileutils_impl.h
rocutils/public/: addr.h  colorutils.h  crc.h  devices.h  fileutils.h
rocview/: CMakeLists.txt  rocview.rc
rocview/dialogs/: accdecgendlg.cpp  accdecgendlg.h  basedlg.cpp  blockdialog.cpp  blockgroupingdlg.cpp  cardlggen.cpp  cardlggen.h  clockdialog.cpp  connectiondialog.cpp  feedbackdialog.cpp  fundialog.cpp  infodialog.cpp  infodialog.h  locationsdlg.cpp  locdialog.cpp  operatordlggen.cpp  operatordlggen.h  outputdialog.cpp  planpaneldlg.cpp  powerctrlgen.cpp  powerctrlgen.h  powermandlggen.cpp  powermandlggen.h  rocguiinidlg.cpp  rocprodlggen.cpp  rocprodlggen.h  rocrailinidialog.cpp  scheduledialog.cpp  seltabdlg.cpp  seltabtrackdlg.cpp  signaldialog.cpp  stagedlggen.cpp  stagedlggen.h  switchdialog.cpp  textdialog.cpp  throttledlggen.cpp  throttledlggen.h  tracedlggen.cpp  tracedlggen.h  trackdialog.cpp  (+8 more)
rocview/impl/: clock.cpp  cv.cpp  guiapp.cpp  guiframe.cpp  lc.cpp  lncv.cpp  meter.cpp
rocview/public/: guiapp.h  guiframe.h  wrapper.xml
rocview/res/: messages.xml
rocview/symbols/: renderer.cpp  renderer.h
rocview/xpm/: LICENSES  freerail-32.xpm  freerail.xpm
(+176 files in other folders)
